--- a/package.json
+++ b/package.json
@@ -9,14 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "20.4.2",
+    "@apollo/client": "^3.7.17",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
-    "eslint": "8.45.0",
-    "eslint-config-next": "13.4.10",
+    "graphql": "^16.7.1",
     "next": "13.4.10",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.1.6"
+    "styled-components": "^6.0.4"
+  },
+  "devDependencies": {
+    "@types/next": "^9.0.0",
+    "@types/node": "^20.4.4",
+    "@types/styled-components": "^5.1.26",
+    "eslint": "^8.45.0",
+    "eslint-config-next": "^13.4.12",
+    "typescript": "^5.2.0-beta"
   }
 }
