--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
     "graphql": "^16.7.1",
-    "next": "13.4.10",
+    "next": "^13.4.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "styled-components": "^6.0.4"
@@ -24,6 +24,6 @@
     "@types/styled-components": "^5.1.26",
     "eslint": "^8.45.0",
     "eslint-config-next": "^13.4.12",
-    "typescript": "^5.2.0-beta"
+    "typescript": "^5.1.6"
   }
 }
